<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:fab="http://schemas.android.com/apk/res-auto"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".ui.activity.MainActivity">

    <include layout="@layout/content_main"/>

    <com.getbase.floatingactionbutton.FloatingActionsMenu
            android:id="@+id/multiple_actions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            fab:fab_addButtonColorNormal="@color/colorPrimary"
            fab:fab_addButtonColorPressed="@color/colorPrimaryDark"
            fab:fab_addButtonPlusIconColor="@color/white"
            fab:fab_labelStyle="@style/menu_labels_style"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp">

        <com.getbase.floatingactionbutton.FloatingActionButton
                android:id="@+id/action_c"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                fab:fab_colorNormal="@color/colorPrimary"
                fab:fab_title="@string/analytics"
                android:src="@drawable/ic_folder_open_black_24dp"
                fab:fab_colorPressed="@color/colorPrimaryDark"/>

        <com.getbase.floatingactionbutton.FloatingActionButton
                android:id="@+id/action_d"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                fab:fab_colorNormal="@color/colorPrimary"
                fab:fab_title="@string/resume"
                android:src="@drawable/ic_content_copy_black_24dp"
                fab:fab_colorPressed="@color/colorPrimaryDark"/>

        <com.getbase.floatingactionbutton.FloatingActionButton
                android:id="@+id/action_a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                fab:fab_colorNormal="@color/colorPrimary"
                fab:fab_title="@string/reasons"
                android:src="@drawable/ic_tag_faces_black_24dp"
                fab:fab_colorPressed="@color/colorPrimaryDark"/>

        <com.getbase.floatingactionbutton.FloatingActionButton
                android:id="@+id/action_b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                fab:fab_colorNormal="@color/colorPrimary"
                fab:fab_title="@string/comments"
                android:src="@drawable/ic_comment_black_24dp"
                fab:fab_colorPressed="@color/colorPrimaryDark"/>




    </com.getbase.floatingactionbutton.FloatingActionsMenu>

</androidx.coordinatorlayout.widget.CoordinatorLayout>