<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
android:layout_margin="16dp">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:text="@string/name"
    />
    <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/nameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:text="@string/date"
    />
    <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/dateEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
    />
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:text="@string/review"
    />

    <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/reviewEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
    android:inputType="textMultiLine"
    android:lines="6"
    android:maxLines="6"/>

    <TextView
            android:layout_width="wrap_content"
            android:textAllCaps="true"
            android:layout_height="wrap_content"
            android:text="@string/rating"
    />

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:paddingTop="4dp"
                  android:orientation="horizontal">
        <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content"
                   android:id="@+id/heart1"
                   android:src="@drawable/ic_favorite_border_black_24dp"/>
        <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content"
                   android:id="@+id/heart2"
                   android:src="@drawable/ic_favorite_border_black_24dp"/>
        <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content"
                   android:id="@+id/heart3"
                   android:src="@drawable/ic_favorite_border_black_24dp"/>
        <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content"
                   android:id="@+id/heart4"
                   android:src="@drawable/ic_favorite_border_black_24dp"/>
        <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content"
                   android:id="@+id/heart5"
                   android:src="@drawable/ic_favorite_border_black_24dp"/>


    </LinearLayout>

    <View
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0"
            android:layout_weight="1"></View>

    <androidx.appcompat.widget.AppCompatButton android:layout_width="wrap_content"
                                               android:layout_height="wrap_content"
                                               android:id="@+id/saveButton"
                                               android:layout_gravity="center_horizontal|bottom"
    android:text="@string/save"/>



</LinearLayout>